2015-08-22  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.1.man: Rename `glilypond.man'.

	* glilypond.am: Include renaming.

2015-08-05  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.am: Add `Last update'.  Setup Emacs mode.

2015-04-03  Werner LEMBERG  <wl@gnu.org>

	* glilypond.man: Make it work in compatibility mode.
	(EL): Fix typo.

2015-03-20  Ralph Corderoy  <ralph@inputplus.co.uk>

	* glilypond.pl: Minor syntax fixes.

2015-03-20  Werner LEMBERG  <wl@gnu.org>

	* glilypond.pl <read files or stdin>: Fix typo.

	Problem reported by Grégoire Babey <gibux@gmx.ch>.

2014-09-03  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.pl: New version 1.3.1

	* all `glilypond' files: Copying and Emacs setting.

2014-07-06  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.pl: New version 1.3

	* glilypond.man: Make man-page compatible with doclifter.

2014-07-04  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.man: Transform to classical man-page style.

2014-07-03  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.man: Improve definitions.

2014-03-30  Steffen Nurpmeso  <sdaoden@yandex.com>

	* Makefile.sub: Put straight error-prevention prefixes for `rm'.

2014-03-30  Steffen Nurpmeso  <sdaoden@yandex.com>

	* Makefile.sub (uninstall_sub): Typo.

2014-03-11  Ingo Schwarze  <schwarze@openbsd.org>  (tiny change)

	* Makefile.sub (install_data): POSIX conformance.

	Do not use $< outside inference rules, and even less when there
	are multiple targets.

2014-02-14  Bernd Warken  <groff-bernd.warken-72@web.de>

	* examples/example.groff: Add this directory and this file.

2014-01-06  Bernd Warken  <groff-bernd.warken-72@web.de>

	Remove archive git@github.com:RUNOFF/groff_lilypond.git

2013-10-30  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.man: Correct writing.

2013-05-10  Bernd Warken  <groff-bernd.warken-72@web.de>

	* glilypond.pl: Correct position information.  Add debug code.
